[gd_scene load_steps=8 format=3 uid="uid://bxbls0iat3cjk"]

[ext_resource type="Texture2D" uid="uid://bydyxd83wf4lv" path="res://world_sprites/textureAtlas.png" id="1_eyjo7"]
[ext_resource type="Script" uid="uid://cp1b34k3f7g8y" path="res://scripts/texture_preview.gd" id="2_fhkvv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yy4wn"]
atlas = ExtResource("1_eyjo7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Animation" id="Animation_t6yee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.388235)]
}

[sub_resource type="Animation" id="Animation_n2ms4"]
resource_name = "fade"
length = 2.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.388235), Color(1, 1, 1, 0.8), Color(1, 1, 1, 0.388235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmv5p"]
_data = {
&"RESET": SubResource("Animation_t6yee"),
&"fade": SubResource("Animation_n2ms4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l180u"]
size = Vector2(16, 16)

[node name="TexturePreview" type="Sprite2D"]
modulate = Color(1, 1, 1, 0.388235)
texture_filter = 1
texture = SubResource("AtlasTexture_yy4wn")
script = ExtResource("2_fhkvv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rmv5p")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l180u")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
